--- a/frontend/views/book.html
+++ b/frontend/views/book.html
@@ -186,10 +186,10 @@ textarea
 
 
 
-<div class="row bg-book"  ng-controller="quantityModuleController">
+<div class="row bg-book" style="margin: 0px" ng-controller="quantityModuleController">
        
     
-        <div class="col-md-4 top-margin">
+        <div class="col-md-3 top-margin">
            <div class="row mt-3 d-flex flex-column">
                <div class="col-md-6 mx-auto">
                 <label for="sel1" id="white">Quantity:
@@ -231,10 +231,10 @@ textarea
                     
            
            
-        <div class=" col-md-4 top-margin">
+        <div class="col-md-6 top-margin">
             <div class="table-responsive col-md-12">
               
-                <table class="table mx-auto" style="width: auto;float:right">
+                <table class="table mx-auto" style="width: auto;">
                     <tr>
                         <td>
                                 <div class="screen" >
@@ -258,7 +258,7 @@ textarea
                
             </div>
             </div>
-            <div class="col-md-4 d-flex flex-column my-auto">
+            <div class="col-md-3 d-flex flex-column my-auto">
                 
                   <div class="legend" style="margin-bottom: 20px;">
                     
