--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -296,14 +296,19 @@ footer{
 .card-img-top{
   border-radius: 50% !important;
 }
-
+.ngdialog.ngdialog-theme-default .ngdialog-content{
+  padding: 0px;
+}
 #myModal{
-  background-color:white;
+  background-color:  rgba(15, 15, 14, 0.9)
+}
 }
 .modal-login {
   color:white;
   width: 350px;
-  background-color: white;
+  background-color: rgba(15, 15, 14, 0.9);
+
+  margin: 0px auto;
   
 
 }
@@ -321,6 +326,7 @@ footer{
 .modal-login h4 {
   text-align: center;
   font-size: 26px;
+  color: white;
 }
 .modal-login  .form-group {
   position: relative;
