--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -23,6 +23,9 @@
                     <li ng-if="isCurrentRoute('/book') " class="nav-item mystyle" ng-class="{'active': isCurrentRoute('/book')}">
                         <a class="nav-link" href="/index.html#!/book"><i class="fa fa-ticket"></i>  Booking</a>
                     </li>
+                    <li ng-if="isUserAdmin()" class="nav-item mystyle" ng-class="{'active': isCurrentRoute('/adminpage')}">
+                        <a class="nav-link" href="/index.html#!/adminpage"><i class="fa fa-edit"></i> Edit </a>
+                    </li>
                     <li class="nav-item mystyle">
                      
                             <a class="nav-link" class="trigger-btn" ng-click="openLoginModal()">
