booking controller modified/deleted service

--- a/frontend/views/booking.html
+++ b/frontend/views/booking.html
@@ -1,39 +1,8 @@
 <style>
-    .bms header {
-        margin: 40px 0;
-        font-size: 44px;
-        font-weight: bold;
-        color: orange;
-    }
+  
     
-    .bms .input-card {
-        display: block
-    }
     
-    select {
-        width: auto;
-        font-size: 14px;
-        font-weight: bold;
-        border: 1px solid #aaa;
-        outline: 0;
-        cursor: pointer;
-        text-align: left;
-        float: left;
-        padding: 9px 20px;
-        box-shadow: 0 0 0 1px #dfe3e7;
-        background: #fff;
-        top: 0;
-        z-index: 1;
-    }
-    
-    .bms a {
-        margin: 0;
-        padding: 0;
-        ;
-        font-size: 100%;
-        vertical-align: baseline;
-        background: 0 0
-    }
+   
     
     .cta {
         padding: 10px 15px;
@@ -66,7 +35,7 @@
     
     .seatI {
         margin: 4px 2px;
-        float: left;
+    
         width: 21px;
     }
     
@@ -171,7 +140,7 @@
         margin-top: 0px;
         font-size: 12px;
         text-align: center;
-        width: 350px;
+       
     }
     
     .btn-legend {
@@ -212,26 +181,9 @@
     }
 </style>
 
-
 <div class="row bg-book">
-
-
-    <div class="col-md-4 top-margin">
+    <div class="col-md-3 top-margin">
         <div class="row mt-3 d-flex flex-column">
-            <div class="col-md-6 mx-auto">
-                <label for="sel1" id="white">Quantity:
-            </label>
-                <select class="form-control " id="sel1" ng-model="selectedCount" ng-change="seats.setAvailCount(selectedCount)" ng-options="count as count.val for count in quantities"></select>
-            </div>
-            <!--  <div class="col-md-6 mx-auto">
-            <label for="name" id="white">Name</label>   
-             <input type="text" id="name" ng-model="name" class="form-control">
-            </div> -->
-            <div class="col-md-6 mt-3 mx-auto">
-                <p for="seatsLeft" id="white">Seats left to choose : {{seats.availCount.val}}</p>
-
-
-            </div>
             <div class="col-md-6 mx-auto">
                 <p for="seatsLeft" id="white">Movie : Lorem ipsum dolor sim amet</p>
             </div>
@@ -240,73 +192,45 @@
             </div>
             <div class="col-md-6 mx-auto">
                 <p for="seatsLeft" id="white">Time : 12:00</p>
-
             </div>
             <div class="col-md-6 mx-auto">
-
-                <p style="color:white;">Seats chosen : {{alertMsg.join(', ')}}</p>
-
+                <p style="color:white;">Seats chosen : {{selection.join(', ')}}</p>
             </div>
             <div class="col-md-6 mx-auto mb-3">
-
                 <button class="btn cta proceed" ng-click="storeSeat()">Confirm</button>
-
             </div>
-
         </div>
     </div>
-
-
-
-    <div class=" col-md-4 top-margin">
+    <div class=" col-md-6 top-margin">
         <div class="table-responsive col-md-12">
-
-            <table class="table mx-auto" style="width: auto;float:right">
+            <table class="table mx-auto" style="width: auto;">
                 <tr>
                     <td>
-                        <div class="screen">
+                        <div class="screen mx-auto">
                             SCREEN
                         </div>
                     </td>
                 </tr>
-                <!-- <tr ng-repeat="row in seats.map[seatQuality].seats" class="row">
-
-                    <td class="SRow1">
-                        <div class="itemSeat d-flex flex-row" ng-repeat="seat in row">
-                            <div ng-show="$first" style="text-align: center;width:20px;color:white;">{{seat.letter}}</div>
-                            <a ng-class="{'selected': seat.check, 'available': (!seat.check && !seat.booked),  'blocked': seat.booked}" ng-click="seats.select({rang:seatQuality, row:row, seat: seat}, selectedCount)">{{seat.val}}</a>
-                        </div>
-                    </td>
-                </tr> -->
-
                 <tr ng-repeat="row in seats1" class="row">
-
                     <td class="SRow1">
-                        <div class="itemSeat d-flex flex-row" ng-repeat="seat in row">
-                            <!-- <div ng-show="$first" style="text-align: center;width:20px;color:white;">{{seat.letter}}</div> -->
-                            <a ng-class="{'selected': seat.check, 'available': (!seat.check && !seat.free),  'blocked': seat.free}" ng-click="seats.select({rang:seatQuality, row:row, seat: seat}, selectedCount)">{{seat.seat_no}}</a>
+                        <div class="itemSeat d-flex flex-row" ng-repeat="seat in row"> 
+                             <a ng-class="{'selected': seat.check, 'available': (!seat.check && seat.free),  'blocked': !seat.free}" ng-click="select(seat)">{{seat.seat_no}}</a>
                         </div>
                     </td>
                 </tr>
-
             </table>
-
         </div>
     </div>
-    <div class="col-md-4 d-flex flex-column my-auto">
-
+    <div class="col-md-3 d-flex flex-column my-auto">
         <div class="legend" style="margin-bottom: 20px;">
-
             <button type="button" class="btn btn-danger btn-legend "></button>
             <p style="overflow: hidden;color:white">Reserved Seat</p>
         </div>
         <div class="legend" style="margin-bottom: 20px;">
-
             <button type="button" class="btn btn-success btn-legend "></button>
             <p style="color:white;">Available Seat</p>
         </div>
         <div class="legend" style="margin-bottom: 20px;">
-
             <button type="button" class="btn btn-warning btn-legend"></button>
             <p style="color:white">Your Choice</p>
         </div>
