admin page-server conn / booking(refactoring)

--- a/frontend/views/adminpage.html
+++ b/frontend/views/adminpage.html
@@ -189,7 +189,11 @@
         .paragraph {
             margin-top: 25px;
         }
-
+       .movie-image{
+           float:none;
+           margin-right:7px;
+           margin-top:7px;
+       }
         /* Force table to not be like tables anymore */
         table,
         thead,
