--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -110,7 +110,7 @@
             height: 70px;
         }
         .table td {
-            padding-left: 110px;
+            padding-left: 165px;
             padding-top: 1px;
             padding-right: 1px;
             padding-bottom: 1px;
@@ -143,14 +143,20 @@
         td:nth-of-type(1):before {
             content: "Movie";
             margin-left: -25px;
+            color:white;
+            margin-top:25px;
         }
         td:nth-of-type(2):before {
             content: "Start";
             margin-left: -25px;
+            color:white;
+            margin-top:25px;
         }
         td:nth-of-type(3):before {
             content: "Room";
             margin-left: -25px;
+            color:white;
+             margin-top:25px;
         }
         td:nth-of-type(4):before {
             content: "";
