--- a/frontend/css/movies.css
+++ b/frontend/css/movies.css
@@ -44,16 +44,15 @@ font-size: 20px;
 .table td{
 	border-top: none !important;
 }
+/*
 @media only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px) {
 
-		/* Force table to not be like tables anymore */
+	
 		table, thead, tbody, th, td, tr {
 			display: block;
 			
 		}
-
-		/* Hide table headers (but not display: none;, for accessibility) */
 		thead tr {
 			position: absolute;
 			top: -9999px;
@@ -77,7 +76,7 @@ font-size: 20px;
     
     
 		td {
-			/* Behave  like a "row"*/ 
+			
 			border: none;
 		
 			position: relative;
@@ -85,9 +84,9 @@ font-size: 20px;
 		}
 
 		td:before {
-			/* Now like a table header 
+			
 			position: absolute;
-			/* Top/left values mimic padding */
+		
 			top: 0;
 			left: 6px;
 			width: 45%;
@@ -95,9 +94,8 @@ font-size: 20px;
 			white-space: nowrap;
 		}
 
-		/*
-		Label the data
-    You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.*/
+		
+	
 		
 		td:nth-of-type(1):before { content: "Title"; color:white;margin-top:25px;}
 		
@@ -108,7 +106,7 @@ font-size: 20px;
 		td:nth-of-type(4):before { content: ""; }
 		td:nth-of-type(5):before { content: ""; }
 	
-	}
+	} */
 
 .styling{
 	
