--- a/frontend/views/adminpage.html
+++ b/frontend/views/adminpage.html
@@ -159,6 +159,9 @@
     /*
 	Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
     */
+    td input[type="text"]{
+        margin-top:25px;
+    }
     .movie-image {
         width: 60px;
         height: 50px;
@@ -186,6 +189,9 @@
 
     @media only screen and (max-width: 760px),
     (min-device-width: 768px) and (max-device-width: 1024px) {
+        td input[type="text"]{
+        margin-top:0px;
+    }
         .paragraph {
             margin-top: 25px;
         }
