--- a/frontend/views/partials/shared/footer.html
+++ b/frontend/views/partials/shared/footer.html
@@ -8,7 +8,7 @@
                     <img src="images/logos/logo_transparent.png" style="height:180px;width:200px">
                 </div>
 
-                <div class="col-xs-6 col-md-3">
+               <!--  <div class="col-xs-6 col-md-3">
                     <h6>Categories</h6>
                     <ul class="footer-links">
                         <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
@@ -18,7 +18,7 @@
                         <li><a href="http://scanfcode.com/category/android/">Android</a></li>
                         <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
                     </ul>
-                </div>
+                </div> -->
 
                 <div class="col-xs-6 col-md-3">
                     <h6>Quick Links</h6>
